// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ColorPanel mobile should render correctly 1`] = `
<div>
  <div
    class="object-panel-item"
    id="fill"
  >
    <div
      class="main"
    >
      <div
        class="color small"
      >
        <div
          class=""
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
  <div
    class="object-panel-item"
    id="stroke"
  >
    <div
      class="main"
    >
      <svgr-url />
    </div>
    <div
      class="label"
    >
      Stroke
    </div>
  </div>
  <div
    class="adm-divider adm-divider-vertical adm-divider-center divider"
  />
</div>
`;

exports[`test ColorPanel mobile should render correctly 2`] = `
<div>
  <div
    class="object-panel-item"
    id="fill"
  >
    <div
      class="main"
    >
      <div
        class="color small"
      >
        <div
          class=""
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
  <div>
    Mock Floating Panel
    <p>
      title: 
      Infill
    </p>
    <button
      type="button"
    >
      onClose
    </button>
    <div
      class="panel"
    >
      <div
        class="color large"
      >
        <div
          class=""
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
      <div>
        Mock ColorPicker Mobile
        <p>
          color: 
          #ff0000
        </p>
        <p>
          open: 
          f
        </p>
        <button
          type="button"
        >
          onPreview
        </button>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onClose
        </button>
      </div>
    </div>
  </div>
  <div
    class="object-panel-item"
    id="stroke"
  >
    <div
      class="main"
    >
      <svgr-url />
    </div>
    <div
      class="label"
    >
      Stroke
    </div>
  </div>
  <div
    class="adm-divider adm-divider-vertical adm-divider-center divider"
  />
</div>
`;

exports[`test ColorPanel mobile should render correctly 3`] = `
<div>
  <div
    class="object-panel-item"
    id="fill"
  >
    <div
      class="main"
    >
      <div
        class="color small"
      >
        <div
          class=""
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
  <div>
    Mock Floating Panel
    <p>
      title: 
      Infill
    </p>
    <button
      type="button"
    >
      onClose
    </button>
    <div
      class="panel"
    >
      <div
        class="color large"
      >
        <div
          class=""
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
      <div>
        Mock ColorPicker Mobile
        <p>
          color: 
          #ff0000
        </p>
        <p>
          open: 
          t
        </p>
        <button
          type="button"
        >
          onPreview
        </button>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onClose
        </button>
      </div>
    </div>
  </div>
  <div
    class="object-panel-item"
    id="stroke"
  >
    <div
      class="main"
    >
      <svgr-url />
    </div>
    <div
      class="label"
    >
      Stroke
    </div>
  </div>
  <div
    class="adm-divider adm-divider-vertical adm-divider-center divider"
  />
</div>
`;

exports[`test ColorPanel mobile should render correctly 4`] = `
<div>
  <div
    class="object-panel-item"
    id="fill"
  >
    <div
      class="main"
    >
      <div
        class="color small"
      >
        <div
          class=""
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
  <div
    class="object-panel-item"
    id="stroke"
  >
    <div
      class="main"
    >
      <svgr-url />
    </div>
    <div
      class="label"
    >
      Stroke
    </div>
  </div>
  <div>
    Mock Floating Panel
    <p>
      title: 
      Stroke
    </p>
    <button
      type="button"
    >
      onClose
    </button>
    <div
      class="panel"
    >
      <div
        class="label"
      >
        Stroke Color
      </div>
      <div
        class="color large"
      >
        <div
          class=""
          style="background-color: rgb(0, 255, 0);"
        />
      </div>
      <div>
        Mock ColorPicker Mobile
        <p>
          color: 
          #00ff00
        </p>
        <p>
          open: 
          f
        </p>
        <button
          type="button"
        >
          onPreview
        </button>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onClose
        </button>
      </div>
      <div
        class="field"
      >
        <div>
          <span
            class="label"
          >
            Stroke Width
          </span>
          <div
            class="ant-input-number-affix-wrapper ant-input-number-affix-wrapper-without-controls css-dev-only-do-not-override-hash ant-input-number-outlined"
          >
            <div
              class="ant-input-number css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-input-number-input-wrap"
              >
                <input
                  aria-valuemin="0"
                  aria-valuenow="1"
                  autocomplete="off"
                  class="ant-input-number-input"
                  role="spinbutton"
                  step="1"
                  value="0.1"
                />
              </div>
            </div>
            <span
              class="ant-input-number-suffix"
            >
              <span
                class="suffix"
              >
                mm
              </span>
            </span>
          </div>
        </div>
        <div
          class="ant-slider css-dev-only-do-not-override-hash ant-slider-horizontal"
        >
          <div
            class="ant-slider-rail"
          />
          <div
            class="ant-slider-track"
            style="left: 0%; width: 1%;"
          />
          <div
            class="ant-slider-step"
          />
          <div
            aria-disabled="false"
            aria-orientation="horizontal"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="1"
            class="ant-slider-handle"
            role="slider"
            style="left: 1%; transform: translateX(-50%);"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="adm-divider adm-divider-vertical adm-divider-center divider"
  />
</div>
`;

exports[`test ColorPanel set stroke width should work 1`] = `
<div>
  <div
    class="block"
  >
    <div
      class="label"
    >
      Infill
    </div>
    <div>
      Mock ColorPicker
      <p>
        allowClear: 
        t
      </p>
      <p>
        initColor: 
        #ff0000
      </p>
      <p>
        triggerType: 
      </p>
      <button
        type="button"
      >
        onChange
      </button>
    </div>
  </div>
  <div
    class="block"
  >
    <div
      class="label"
    >
      Stroke
    </div>
    <div
      class="controls"
    >
      <div>
        Mock ColorPicker
        <p>
          allowClear: 
          f
        </p>
        <p>
          initColor: 
          #00ff00
        </p>
        <p>
          triggerType: 
          stroke
        </p>
        <button
          type="button"
        >
          onChange
        </button>
      </div>
      <div
        class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash ant-input-number-outlined"
      >
        <div
          class="ant-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="ant-input-number-handler ant-input-number-handler-up"
            role="button"
            unselectable="on"
          >
            <span
              aria-label="up"
              class="anticon anticon-up ant-input-number-handler-up-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="up"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                />
              </svg>
            </span>
          </span>
          <span
            aria-disabled="false"
            aria-label="Decrease Value"
            class="ant-input-number-handler ant-input-number-handler-down"
            role="button"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-input-number-handler-down-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuemin="0"
            aria-valuenow="20"
            autocomplete="off"
            class="ant-input-number-input"
            id="stroke-width"
            role="spinbutton"
            step="1"
            value="2.0"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test ColorPanel should render correctly 1`] = `
<div>
  <div
    class="block"
  >
    <div
      class="label"
    >
      Infill
    </div>
    <div>
      Mock ColorPicker
      <p>
        allowClear: 
        t
      </p>
      <p>
        initColor: 
        #ff0000
      </p>
      <p>
        triggerType: 
      </p>
      <button
        type="button"
      >
        onChange
      </button>
    </div>
  </div>
  <div
    class="block"
  >
    <div
      class="label"
    >
      Stroke
    </div>
    <div
      class="controls"
    >
      <div>
        Mock ColorPicker
        <p>
          allowClear: 
          f
        </p>
        <p>
          initColor: 
          #00ff00
        </p>
        <p>
          triggerType: 
          stroke
        </p>
        <button
          type="button"
        >
          onChange
        </button>
      </div>
      <div
        class="ant-input-number ant-input-number-sm css-dev-only-do-not-override-hash ant-input-number-outlined"
      >
        <div
          class="ant-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="ant-input-number-handler ant-input-number-handler-up"
            role="button"
            unselectable="on"
          >
            <span
              aria-label="up"
              class="anticon anticon-up ant-input-number-handler-up-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="up"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                />
              </svg>
            </span>
          </span>
          <span
            aria-disabled="false"
            aria-label="Decrease Value"
            class="ant-input-number-handler ant-input-number-handler-down"
            role="button"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-input-number-handler-down-inner"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
        <div
          class="ant-input-number-input-wrap"
        >
          <input
            aria-valuemin="0"
            aria-valuenow="1"
            autocomplete="off"
            class="ant-input-number-input"
            id="stroke-width"
            role="spinbutton"
            step="1"
            value="0.1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
